test/parser/Queries/syntax_errors/fail_K-ForExprWithout-27.xq
: for ** let ******* ne *foo***** ne ******** let *** eq ***** for ** eq *********** ne *********:)
(: Test: K-ForExprWithout-27 let           foo                 $ :)
( Written by: Frans Englich          let                 : where ) eq 
(:  2006-10-05T18:29:37+02:00         where       where    for       foo:) for 
(: Purpose: Variable whichis  eq not in scope.            :)
(:*********** for ***** $ * for ******** ne  eq ****************** eq * ne *****:)
